<resources>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="statistic">Статистика</string>
    <string name="steps">Шаги</string>
    <string name="targets">Цели</string>
    <string name="settings">Настройки</string>
    <string name="map">Где я?</string>
    <string name="stat">Статистика</string>
    <string name="day_target">Цель</string>
    <string name="save">Сохранить</string>
    <string name="_0">0</string>
    <string name="fire">fire</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">Шагоход</string>
</resources>