<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress"
        android:layout_width="178dp"
        android:layout_height="170dp"
        android:progress="0"
        android:rotation="0"
        app:indicatorColor="@color/teal_200"
        app:indicatorSize="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.323"
        app:trackColor="@color/light_blue"
        app:trackCornerRadius="8dp"
        app:trackThickness="8dp" />

    <TextView
        android:id="@+id/textSteps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/steps"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="@+id/progress"
        app:layout_constraintEnd_toEndOf="@+id/progress"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="@+id/progress"
        app:layout_constraintTop_toTopOf="@+id/progress"
        app:layout_constraintVertical_bias="0.354" />

    <TextView
        android:id="@+id/stepsCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/progress"
        app:layout_constraintEnd_toEndOf="@+id/progress"
        app:layout_constraintStart_toStartOf="@+id/progress"
        app:layout_constraintTop_toBottomOf="@+id/textSteps" />

    <ImageView
        android:id="@+id/kmImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/fire"
        android:src="@drawable/ic_baseline_hiking_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/progress"
        app:layout_constraintTop_toBottomOf="@+id/progress"
        app:layout_constraintVertical_bias="0.32" />

    <ImageView
        android:id="@+id/fireImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/fire"
        android:src="@drawable/ic_baseline_fire_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/kmImage"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/progress"
        app:layout_constraintTop_toBottomOf="@+id/progress"
        app:layout_constraintVertical_bias="0.32" />

    <TextView
        android:id="@+id/kkalCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/fireImage"
        app:layout_constraintStart_toStartOf="@+id/fireImage"
        app:layout_constraintTop_toBottomOf="@+id/fireImage"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/kmCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/kmImage"
        app:layout_constraintStart_toStartOf="@+id/kmImage"
        app:layout_constraintTop_toBottomOf="@+id/kmImage"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>